# market-data-toolkit

./: .gitignore  CMakeLists.txt  README.md
.github/workflows/: ci.yml
data/: sample_trades.csv
include/mdt/: aggregator.hpp  csv_parser.hpp  order_book.hpp  trade.hpp
scripts/: download_data.sh
src/: aggregator.cpp  book_demo_main.cpp  csv_parser.cpp  order_book.cpp  tickstats_main.cpp
tests/: test_aggregator.cpp  test_csv_parser.cpp  test_order_book.cpp
